Fixed showing of horizontal scrollbar on agile whiteboard page.
It was due to "issue_more_actions_link_container" element's inherited style "right: -21px;".

--- a/themes/oxygen/css/oxygen.css
+++ b/themes/oxygen/css/oxygen.css
@@ -3311,6 +3311,7 @@ a.dynamic_menu_link.button-pressed, a.dynamic_menu_link.button-pressed:hover {
 }
 .whiteboard-issue .issue_more_actions_link_container {
     left: 16px;
+    right: initial;
     bottom: 2px;
     top: initial;
 }
